# moveit

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/moveit/: version.h
devel/include/moveit_msgs/: AllowedCollisionEntry.h  AllowedCollisionMatrix.h  AttachedCollisionObject.h  BoundingVolume.h  CheckIfRobotStateExistsInWarehouseRequest.h  CheckIfRobotStateExistsInWarehouseResponse.h  CollisionObject.h  ConstraintEvalResult.h  Constraints.h  ContactInformation.h  CostSource.h  DeleteRobotStateFromWarehouseRequest.h  DeleteRobotStateFromWarehouseResponse.h  DisplayRobotState.h  DisplayTrajectory.h  ExecuteKnownTrajectoryRequest.h  ExecuteKnownTrajectoryResponse.h  GetCartesianPathRequest.h  GetCartesianPathResponse.h  GetConstraintAwarePositionIK.h  GetConstraintAwarePositionIKRequest.h  GetConstraintAwarePositionIKResponse.h  GetKinematicSolverInfo.h  GetKinematicSolverInfoRequest.h  GetKinematicSolverInfoResponse.h  GetMotionPlan.h  GetMotionPlanRequest.h  GetMotionPlanResponse.h  GetPlanningSceneRequest.h  GetPlanningSceneResponse.h  GetPositionFKRequest.h  GetPositionFKResponse.h  GetPositionIKRequest.h  GetPositionIKResponse.h  GetRobotStateFromWarehouseRequest.h  GetRobotStateFromWarehouseResponse.h  GetStateValidityRequest.h  GetStateValidityResponse.h  Grasp.h  GripperTranslation.h  (+58 more)
devel/include/moveit_planners_ompl/: OMPLDynamicReconfigureConfig.h
devel/include/moveit_ros_manipulation/: PickPlaceDynamicReconfigureConfig.h
devel/include/moveit_ros_planning/: PlanExecutionDynamicReconfigureConfig.h  PlanningSceneMonitorDynamicReconfigureConfig.h  SenseForPlanDynamicReconfigureConfig.h  TrajectoryExecutionDynamicReconfigureConfig.h
devel/lib/moveit_core/: moveit_version
devel/lib/moveit_planners_ompl/: moveit_demo_construct_constraints_database  moveit_ompl_planner
devel/lib/moveit_ros_benchmarks/: moveit_run_benchmark
devel/lib/moveit_ros_benchmarks_gui/: moveit_benchmark_gui
devel/lib/moveit_ros_move_group/: list_move_group_capabilities  move_group
devel/lib/moveit_ros_perception/: moveit_occupancy_map_server
devel/lib/moveit_ros_planning/: demo_scene  (+9 more)
lynxmotion/: al5d.urdf
src/: .rosinstall  .rosinstall.bak
src/al5d_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/al5d_moveit_config_with_grip/: .setup_assistant  CMakeLists.txt  package.xml
src/chatter-tester/: CMakeLists.txt  package.xml
src/chatter-tester/src/: chatter.cpp  chatter.hpp  chatter_driver.cpp  chatter_driver.hpp  chatter_node.cpp  olegik.cpp
src/chatter-tester/srv/: user_input.srv
src/lynxmotion_al5d_support/: package.xml
src/lynxmotion_quarc/: CMakeLists.txt  \  package.xml
src/lynxmotion_quarc/config/: al5d.config  al5d.srdf
src/lynxmotion_quarc/launch/: driver_al5d.launch  load_al5d.launch  test_al5d.launch
src/lynxmotion_quarc/src/: move_group_python_interface.py  reporter.py
src/lynxmotion_quarc/srv/: user_input.srv
src/lynxmotion_quarc/urdf/: al5d.xacro
src/lynxmotion_quarc_motion_planning/: .setup_assistant  CMakeLists.txt  package.xml
src/quarc_user_interface/: CMakeLists.txt  cli-interface.sh  cli-macros.sh  package.xml
(+295 files in other folders)
