<?xml version="1.0"?>
<package>
  <name>chatter_tester</name>
  <version>0.1.0</version>
  <description>testing the publish and subscribe stuff</description>
  <maintainer email="hershal.bhave@gmail.com">Hershal Bhave</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/lynxmotion_tm4c</url> -->
  <!-- <url type="bugtracker">https://github.com/smd-ros-devel/lynxmotion_tm4c</url> -->
  <!-- <url type="repository">https://github.com/smd-ros-devel/lynxmotion_tm4c/issues</url> -->


  <author email="hershal.bhave@gmail.com">Hershal Bhave</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
